--- a/styles/stylebase.css
+++ b/styles/stylebase.css
@@ -1,13 +1,14 @@
 body{
     background-color: aliceblue;
+    margin: 0 auto;
 }
 
 header{
     font-family: "Roboto";
     font-size: x-large;
     text-align: center;
-    padding-top: 1%;
-    padding-bottom: 2%;
+    padding-top: 1.4%;
+    padding-bottom: 1.4%;
     font-weight: 700;
     color: rgb(0, 83, 139);
 }
@@ -15,9 +16,11 @@ header{
 nav{
     font-family: "PT_Sans";
     font-size: large;
-    padding-bottom: 2%;
+    margin-bottom: 2%;
     color: rgb(255, 197, 7);
     text-align: center;
+    padding: 1.3%;
+    background-color: rgb(213, 235, 255);
 }
 
 nav a{
@@ -31,13 +34,8 @@ form{
 
 footer{
     font-family: "Roboto";
-    text-align: right;
     font-size: small;
-    padding-left: 72%;
-    padding-bottom: 3%;
-
-    position: fixed;
-    bottom: 0;
+    color: gray;
 }
 
 fieldset{
@@ -46,4 +44,25 @@ fieldset{
     margin-right: 10%;
     margin-left: 10%;
     margin-bottom: 1%
+}
+
+#pagina{
+    overflow: hidden;
+}
+
+#pagina_flex{
+    display:flex; height: 100vh; 
+    width:100vw; 
+    align-items: end; 
+    justify-content: start; 
+    flex-direction: column;
+}
+
+#conteudo{
+    flex-grow: 1; 
+    width: 100%;
+}
+
+#footer{
+    width: 100%
 }
