--- a/styles/stylebase.css
+++ b/styles/stylebase.css
@@ -11,10 +11,10 @@ header{
     padding-bottom: 1.4%;
     font-weight: 700;
     color: rgb(0, 83, 139);
+    background-color: rgb(186, 217, 247);
 }
 
 nav{
-    font-family: "PT_Sans";
     font-size: large;
     margin-bottom: 2%;
     color: rgb(255, 197, 7);
@@ -24,7 +24,16 @@ nav{
 }
 
 nav a{
+    font-family: "PT_Sans";
+    margin-right: 1%;
+    margin-left: 1%;
     text-decoration: none;
+    color: rgb(25, 27, 117);
+}
+
+nav a:hover{
+    color: rgb(74, 75, 172);
+    text-shadow: 0px 0px 10px rgb(255, 197, 7);
 }
 
 form{
@@ -44,6 +53,19 @@ fieldset{
     margin-right: 10%;
     margin-left: 10%;
     margin-bottom: 1%
+}
+
+button{
+    font-family: "Roboto";
+    border: 1px solid grey;
+    border-radius: 10%;
+    background-color: azure;
+    padding: 0.5%;
+}
+
+button:hover{
+    font-weight: 700;
+    box-shadow: 0px 0px 5px rgb(139, 135, 135);
 }
 
 #pagina{
