Ajustes no CSS do cadastro e no CSS base

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -17,3 +17,23 @@
     font-family: "Roboto";
     src: url(../fonts/Roboto/Roboto-Medium.ttf);
 }
+
+@font-face {
+    font-family: "Kanit";
+    src: url(../fonts/Kanitt/Kanit-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Josefin_Sans";
+    src: url(../fonts/Josefin_Sans/JosefinSans-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: "Archivo_Black";
+    src: url(../fonts/Archivo_Black/ArchivoBlack-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Exo_2";
+    src: url(../fonts/Exo_2/Exo2-VariableFont_wght.ttf);
+}
