--- a/styles/stylearquivo.css
+++ b/styles/stylearquivo.css
@@ -34,3 +34,14 @@ legend
     
 }
 
+#botoes{
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+#escArq{
+    margin-left: auto;
+    margin-right: 20px;
+    border: none;
+}
