--- a/styles/stylearquivo.css
+++ b/styles/stylearquivo.css
@@ -1,7 +1,8 @@
 #regrasNome
 {
     width: 500px;
-    margin-top: 4%;
+    margin-top: 3%;
+    margin-bottom: 3%;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(249, 252, 255);
@@ -42,6 +43,7 @@ legend
 
 #escArq{
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: auto;
+    width: 500px;
     border: none;
 }
