--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -1,5 +1,7 @@
 #perfis{
     display: flex;
+    margin-left: 8%;
+    margin-bottom: 5%;
 }
 
 .foto_perfil{
@@ -21,5 +23,16 @@ h3{
 figcaption{
     display: flex;
     margin-top: 3%;
+    font-size:x-large;
+    font-family: "Josefin";
+}
+
+
+
+#informacao{
+    margin-left: auto;
+    margin-right: auto;
     font-size: larger;
+    text-align: center;
+    width: 800px;
 }
